# yurugengo

./: .gitignore  LICENSE  README.md  convert.py  dodo.py  fix_amazon_links.py  netlify.toml  pyproject.toml  requirements.txt  rundoc.bat  setup.cfg  setup.py  vscode.bat
.github/ISSUE_TEMPLATE/: ------------.md
docs/: about.rst  conf.py  genindex.rst  index.rst  reference.rst  robots.txt
docs/_templates/: ads_google.html  ads_themoneytizer.html  ads_top_medium_rectangle.html  layout.html
docs/reference/: 7days-to-end-with-you.rst  AI選書256.rst  OEDシリーズ.rst  QRシリーズ.rst  googleシリーズ.rst  index.rst  「た」シリーズ.rst  「た」シリーズ_89-94.rst  「る・らる」本質回.rst  うんちくしりとりパンクラチオン_33.rst  うんちくエウレーカウミガメのクイズ208.rst  うんちくエウレーカウミガメのクイズ209.rst  うんちくエウレーカクイズ121.rst  うんちくエウレーカクイズ132.rst  うんちくエウレーカクイズ144.rst  うんちくエウレーカクイズ151.rst  うんちくエウレーカクイズ154.rst  うんちくエウレーカクイズ166.rst  うんちくエウレーカクイズ192.rst  うんちくエウレーカクイズ226.rst  うんちくエウレーカクイズ245.rst  うんちくエウレーカクイズ262.rst  うんちくエウレーカクイズ290.rst  うんちくエウレーカクイズシリーズ.rst  おしゃれ用語.rst  ことわざシリーズ.rst  させていただくシリーズ.rst  その他.rst  ゆる学徒ハウスシリーズ.rst  ゆる言語学ラジオ大好き芸人122.rst  ゆる言語学徒告知回_131.rst  アニメ.rst  アルゴリズム_c1-4.rst  アルゴリズムシリーズ.rst  ウソマスター.rst  エスペラントシリーズ.rst  オノマトペシリーズ.rst  カタルシス英文法シリーズ.rst  キショ奇書_101.rst  キショ奇書インディ・ジョーンズ_236.rst  (+134 more)
docs/videos/: anti.rst  collaboration.rst  horimotoken.rst  index.rst  program_list.rst  statistics.rst  timeline.rst  yurucomputer_radio_list.rst  yurugackt_house_list.rst  yurugengo.rst  yurugengo_radio_list.rst
docs/words/: 40ミリ秒.rst  7days_to_end_with_you.rst  90対90の法則.rst  B4的全能感.rst  BookNotion.rst  Bybee・バイビー.rst  DAIPONMAJIKANSHA.rst  IT原始人.rst  (+504 more)
